# cardiac-geometries

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.html  Dockerfile  Dockerfile_gmsh  LICENSE  README.md  api.html  atlas.html  development.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.cfg  third_party.html
.github/workflows/: build_docs.yml  deploy_docs.yml  docker-image.yml  main.yml  mpi.yml  pypi.yml
_modules/: index.html
_modules/cardiac_geometries/: _dolfin_utils.html  _lv_ellipsoid_fibers.html  _mesh.html  calculus.html  dolfin_utils.html  geometry.html  viz.html
_sources/: CONTRIBUTING.md  api.rst  atlas.ipynb  install.md  quickstart.md  third_party.md
docs/: _config.yml  _toc.yml  api.rst  atlas.md  development.md  index.md  install.md  quickstart.md
src/cardiac_geometries/: __init__.py  __main__.py  _biv_fibers.py  _dolfin_utils.py  _import_checks.py  _lv_elipsoid_fibers.py  _lv_ellipsoid_fibers.py  _mesh.py  _slab_fibers.py  aha.py  bai_atlas.py  calculus.py  cli.py  dolfin_utils.py  geometry.py  utils.py  viz.py
src/cardiac_geometries/_gmsh/: __init__.py  _biv_ellipsoid.py  _lv_ellipsoid.py  _slab.py  utils.py
src/cardiac_geometries/_mshr/: __init__.py  _biv.py  _lv.py  _utils.py
src/cardiac_geometries/fibers/: __init__.py  _biv_ellipsoid.py  _lv_ellipsoid.py  _slab.py  _utils.py
src/cardiac_geometries/mshr/: biv.py  lv.py  utils.py
tests/: load_and_save.py  test_cli.py  test_geometry.py  test_gmsh.py  test_mshr.py
