[metadata]
name = cardiac_geometries
version = 0.0.1
description = A python library for cardiac geometries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ComputationalPhysiology/cardiac_geometries
author = Henrik Finsberg
author_email = henriknf@simula.no
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = finite element, mechanics, cardiac, heart

[options]
packages = find:
install_requires =
    meshio
python_requires = >=3.6
package_dir =
    =src
zip_safe = False

[options.packages.find]
exclude =
    tests
    demos

[options.extras_require]
dev =
    black
    bump2version
    flake8
    ipython
    mypy
    pre-commit
docs =
    Sphinx
    jupyter-book
    myst-parser
    pandoc
    sphinxcontrib-bibtex
gmsh =
    gmsh
    ldrb
    meshio
mshr =
    mshr
plot =
    fenics-plotly
    matplotlib
test =
    black
    flake8
    jupytext
    mypy
    pytest
    pytest-cov
    pytest-env

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
ignore = E203, E266, E402, E501, W503, E731
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=cardiac_geometries --cov-report html -v --cov-report term-missing
testpaths =
    tests
env =
    FENICS_PLOTLY_SHOW=0

[mypy]
files = cardiac_geometries,tests
ignore_missing_imports = true
