[metadata]
name = cardiac_geometries
version = 0.11.1
description = A python library for cardiac geometries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ComputationalPhysiology/cardiac_geometries
author = Henrik Finsberg
author_email = henriknf@simula.no
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = cardiac, geometry, mesh, gmsh

[options]
packages = find:
install_requires =
    meshio
    numpy
    rich-click
python_requires = >=3.6
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cardiac-geometries = cardiac_geometries.cli:app

[options.extras_require]
dev =
    bump2version
    ipython
    pdbpp
    pre-commit
docs =
    jupyter-book
    jupytext
    sphinxcontrib-bibtex
gmsh =
    gmsh
ldrb =
    ldrb
pypi =
    build
test =
    ldrb
    pytest
    pytest-cov
viz =
    h5py

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
ignore = E203, E266, E402, E501, W503, E731
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=cardiac_geometries --cov-report html -v --cov-report term-missing
testpaths =
    tests
markers =
    mshr: mark a test that tests the mshr backend.
    gmsh: mark a test that tests the mshr backend.

[mypy]
files = cardiac_geometries,tests
ignore_missing_imports = true
